kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-app
  namespace: weather-demo
spec:
  selector:
    app: weather-app
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30080
  type: NodePort
